# Self-intersection

./: intersectionWords.cabal  stack.yaml
app/: Main.hs
src/: ConstrainedStuff.hs  Histogram.hs  MonteCarlo.hs  WordIntersection.hs
