name:                intersectionWords
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/intersectionWords#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     WordIntersection, Histogram, MonteCarlo, ConstrainedStuff
  build-depends:       base >= 4.7 && < 5
                       , parallel
                       , histogram-fill
                       , vector
                       , containers
                       , lens
                       , Chart
                       , Chart-cairo
                       , mersenne-random-pure64
                       , mtl
                       , deepseq
                       , Workflow
                       , transformers
  default-language:    Haskell2010

executable intersectionWords-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -fforce-recomp -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , intersectionWords
                     , parallel
                     , histogram-fill
                     , vector
                     , containers
                     , lens
                     , Chart
                     , Chart-cairo
                     , mersenne-random-pure64
                     , mtl
                     , deepseq
                     , Workflow
                     , transformers
  default-language:    Haskell2010

test-suite intersectionWords-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , intersectionWords
                     , parallel
                     , histogram-fill
                     , vector
                     , containers
                     , lens
                     , Chart
                     , Chart-cairo
                     , mersenne-random-pure64
                     , mtl
                     , deepseq
                     , Workflow
                     , transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/intersectionWords
